# smol-moe

./: .gitignore  Hugo_Gonzalez_ScholarsTakehome.ipynb  README.md  main.py  pyproject.toml
config/: default.json
scripts/: domain_train.py  download_weights.py  generate.py  pretrain.py  upcycle.py
src/: __init__.py  config.py  domain_expert.py  training.py  upcycling.py
src/models/: __init__.py  components.py  smol_moe.py
src/utils/: __init__.py  env.py  helpers.py
tests/: conftest.py  test_components.py  test_domain_expert.py  test_model.py  test_training.py  test_upcycling.py
